src = [
  'pytango.cpp',
  'api_util.cpp',
  'archive_event_info.cpp',
  'server/attr.cpp',
  'attr_conf_event_data.cpp',
  'server/attribute.cpp',
  'server/auto_monitor.cpp',
  'attribute_alarm_info.cpp',
  'attribute_dimension.cpp',
  'attribute_event_info.cpp',
  'attribute_info.cpp',
  'attribute_info_ex.cpp',
  'attribute_proxy.cpp',
  'base_types.cpp',
  'callback.cpp',
  'change_event_info.cpp',
  'server/command.cpp',
  'command_info.cpp',
  'connection.cpp',
  'constants.cpp',
  'data_ready_event_data.cpp',
  'database.cpp',
  'db.cpp',
  'dev_command_info.cpp',
  'dev_error.cpp',
  'device_attribute.cpp',
  'device_attribute_config.cpp',
  'device_attribute_history.cpp',
  'server/device_class.cpp',
  'device_data.cpp',
  'device_data_history.cpp',
  'server/device_impl.cpp',
  'device_info.cpp',
  'device_pipe.cpp',
  'device_proxy.cpp',
  'devintr_change_event_data.cpp',
  'server/dserver.cpp',
  'server/encoded_attribute.cpp',
  'enums.cpp',
  'event_data.cpp',
  'exception.cpp',
  'from_py.cpp',
  'server/fwdAttr.cpp',
  'group.cpp',
  'group_reply.cpp',
  'group_reply_list.cpp',
  'locker_info.cpp',
  'locking_thread.cpp',
  'server/log4tango.cpp',
  'server/multi_attribute.cpp',
  'server/multi_class_attribute.cpp',
  'periodic_event_info.cpp',
  'server/pipe.cpp',
  'pipe_event_data.cpp',
  'pipe_info.cpp',
  'poll_device.cpp',
  'pytango.cpp',
  'pytgutils.cpp',
  'pyutils.cpp',
  'server/subdev.cpp',
  'server/tango_util.cpp',
  'time_val.cpp',
  'to_py.cpp',
  'server/user_default_attr_prop.cpp',
  'server/user_default_pipe_prop.cpp',
  'version.cpp',
  'server/wattribute.cpp',
]

pch_dir = include_directories('pch')

pylib = py.extension_module('tango', src,  
  cpp_pch : 'pch/precompiled_header.hpp',
  include_directories: pch_dir,
  dependencies : [py_dep, numpy_dep, boost_dep, tango_dep],
)

pypathdir = meson.current_build_dir()
